# TowCam

./: .gitignore  BUILD  CHANGELOG.md  CMakeLists.txt  HCLog.cpp  HCLog.h  README.md  TowCam.cpp  TowCam.h  TowcamSocketThread.cpp  TowcamSocketThread.h  compilation.h  ini_file.cpp  ini_file.h  main.cpp  qcustomplot-v1.h  towcam.ini  towcam.pro
.github/workflows/: main.yml  release.yml
